--- a/security.html
+++ b/security.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oDfv7fwe&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=np5HoMwQ'>Zensar Technologies Careers - Sr. Pre-Sales Checkpoint Security Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4499175002'>Job Application for System Software & Security Architect at Graphcore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4499175002'>Job Application for System Software & Security Architect at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK  Cambridge</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light">Cambridge, UK  Cambridge</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oY5QafwN&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nTproMwo'>Imperva Careers - Cloud Security - Managed Services Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oY5QafwN&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nTproMwo'>Imperva Careers - Cloud Security - Managed Services Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -75,7 +75,7 @@
 <p><span class="badge badge-light">San Diego, California  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mcgill.co.uk/about-us/careers/security-engineer-aberdeen'>Security Engineers (Aberdeen &amp; Dundee) | McGill</a></h5> 
+<h5><a href='https://www.mcgill.co.uk/about-us/careers/security-engineer-aberdeen'>Security Engineers (Aberdeen &amp; Dundee) | McGill</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -123,11 +123,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/'>Security Analyst, Assurance | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/security-analyst-assurance-1919954/'>Security Analyst, Assurance | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidepoint-security/job/olNrbfwu'>GuidePoint Security Careers - Senior Cloud Security Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidepoint-security/job/olNrbfwu'>GuidePoint Security Careers - Senior Cloud Security Architect</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -197,7 +197,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -221,7 +221,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Munich  Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careerlink.com/job/13800-000184'>Sr Cloud Security Engineer Job in Omaha, NE | Careerlink</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careerlink.com/job/13800-000184'>Sr Cloud Security Engineer Job in Omaha, NE | Careerlink</a></h5> 
 <p><span class="badge badge-light">Omaha, NE</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -229,7 +229,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -249,7 +249,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
+<h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
 <p><span class="badge badge-light">Boston  Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -261,7 +261,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
+<h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -317,7 +317,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://religroup.applytojob.com/apply/FyDMaFQM1Q/Senior-Cybersecurity-Analyst'>Senior Cybersecurity Analyst - RELI Group, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://religroup.applytojob.com/apply/FyDMaFQM1Q/Senior-Cybersecurity-Analyst'>Senior Cybersecurity Analyst - RELI Group, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -369,7 +369,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/security-software-engineer-c-embedded-software-engineer-wmd'>
+<h5><a href='https://careercyresconsulting.recruitee.com/o/security-software-engineer-c-embedded-software-engineer-wmd'>
       Security Software Engineer C++ / Embedded Software Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
@@ -391,7 +391,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://edc.referrals.selectminds.com/jobs/security-engineer-2454'>Security Engineer - Entrust Datacard Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/security-engineer-2454'>Security Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -428,7 +428,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4485698002'>Job Application for Cyber Security Engineer / Penetration Tester  at Rakuten Americas</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4485698002'>Job Application for Cyber Security Engineer / Penetration Tester  at Rakuten Americas</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
